--- a/components/s.css
+++ b/components/s.css
@@ -1,13 +1,25 @@
-.s{
-    /* orange */
-    color: #F64B29 ;
+.s {
+  /* orange */
+  color: #f64b29;
 
-    /* grey */
-    color: #C4C4C4 ;
+  /* grey */
+  color: #c4c4c4;
 
-    /* background black */
-    color: #1A1A21 ;
+  /* header text color */
+  color: #ffff;
 
-    /* star color */
-    color:#F7B02E ;
+  /* text grey color */
+  color: #e5e5e5;
+
+  /* sub-text grey color */
+  color: #dddddd;
+
+  /* background black */
+  color: #1a1a21;
+
+  /* sub-text grey color */
+  color: #3f3f3f;
+
+  /* star color */
+  color: #f7b02e;
 }
